Delete Html content files in the folders and Layout and also replace Monte carlo html to _layout file. css and js add to this project

--- a/EndPoint3/EndPoint.csproj
+++ b/EndPoint3/EndPoint.csproj
@@ -7,6 +7,11 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Views\Inputs\" />
+    <Folder Include="Views\Calculations\" />
+    <Folder Include="Views\Reporting\" />
+    <Folder Include="Views\PVT\" />
+    <Folder Include="Views\Option\" />
     <Folder Include="wwwroot\images\HomePages\Slider\" />
     <Folder Include="wwwroot\SiteTemplate\assets\images\menu-main\card\" />
   </ItemGroup>
